Rework source code to be compiled under JDK8, added wiki link to README, upgraded dependencies versions